syntax = "proto3";

package songs;

// za pesem
message Song {
  string id = 1;
  string title = 2;
  string artist = 3;
  string genre = 4;
}
// dodajanje pesmi
message AddSongRequest {
  string title = 1;
  string artist = 2;
  string genre = 3;
}
// po dodajanju pesmi
message AddSongResponse {
  bool success = 1;
  string message = 2;
  Song song = 3;
}
//za pridobitev ene pesmi
message GetSongRequest {
  string id = 1;
}
// odgovor z eno pesmijo
message GetSongResponse {
  Song song = 1;
  bool found = 2;
}

message GetAllSongsRequest {}

// vsemi pesmimi
message GetAllSongsResponse {
  repeated Song songs = 1;
  int32 total = 2;
}
//  za streaming pesmi po Å¾anru
message StreamSongsByGenreRequest {
  string genre = 1;
}

service SongService {

  rpc AddSong(AddSongRequest) returns (AddSongResponse) {}
  rpc GetSong(GetSongRequest) returns (GetSongResponse) {}
  rpc GetAllSongs(GetAllSongsRequest) returns (GetAllSongsResponse) {}
  rpc StreamSongsByGenre(StreamSongsByGenreRequest) returns (stream Song) {}
}